cabal-version:       2.2
name:                secd
version:             0.1.0.0
license:             BSD-3-Clause
author:              Sergei Stepanenko
maintainer:          kaptch@gmail.com
category:            Language
build-type:          Simple

library
  exposed-modules:     SECD
                     , SExp
  build-depends:       base
                     , Stack
                     , containers
                     , mtl
                     , vector
                     , microlens
                     , microlens-th
  hs-source-dirs:      src
  default-language:    Haskell2010